// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<APIView/> render() should render a Create API Key Button 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      REST API
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="body-regular mb32"
      >
        <p>
          We use HTTP basic authentication to authenticate API requests. Below are the parameters you will need to access our API. For more details, please consult our
           
          <a
            href="https://developers.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Developer Documentation
          </a>
          .
        </p>
      </div>
      <div
        class="heading-section-semibold mb16"
      >
        API Access & Credentials
      </div>
      <div
        class="inputField form-group"
      >
        <label
          class="control-label"
          for="URL"
        >
          Base API URL
        </label>
        <span
          class="wrapper group horizontal"
        >
          <div
            class="wrapper left isNested"
          >
            <input
              class="input"
              id="url"
              name="url"
              readonly=""
              type="text"
              value="https://justatest.gorgias.com/api/"
            />
          </div>
          <button
            aria-disabled="false"
            class="wrapper copyBtn fill secondary medium right isAuxiliaryButton"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                file_copy
              </i>
              Copy
            </span>
          </button>
        </span>
      </div>
      <div
        class="inputField form-group"
      >
        <label
          class="control-label"
          for="email"
        >
          Username (your email address)
        </label>
        <span
          class="wrapper group horizontal"
        >
          <div
            class="wrapper left isNested"
          >
            <input
              class="input"
              id="email"
              name="email"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <button
            aria-disabled="false"
            class="wrapper copyBtn fill secondary medium right isAuxiliaryButton"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                file_copy
              </i>
              Copy
            </span>
          </button>
        </span>
      </div>
      <div
        class="inputField mb32 form-group"
      >
        <label
          class="control-label"
          for="apiKey"
        >
          Password (API Key)
        </label>
        <div>
          <p
            class="body-regular mb24"
          >
            You can create an API Key using the button below.
          </p>
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create API key
          </button>
        </div>
      </div>
      <div
        class="heading-subsection-semibold mb8"
      >
        Postman collection
      </div>
      <div
        class="body-regular mb24"
      >
        <p>
          You can also import our
           
          <a
            href="https://www.getpostman.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Postman
          </a>
           
          collection below to quickly connect and use our REST API.
        </p>
      </div>
      <div
        class="postman-run-button mb32"
        data-postman-action="collection/import"
        data-postman-collection-url="entityId=15687974-2ca60778-1282-4a00-9d6a-8e90213b8248&entityType=collection&workspaceId=b6894a63-39b4-496f-acdc-db697172e169"
        data-postman-param="env%5BGorgias%20Helpdesk%5D=W3siZW5hYmxlZCI6dHJ1ZSwia2V5IjoiZG9tYWluIiwidmFsdWUiOiJqdXN0YXRlc3QiLCJ0eXBlIjoidGV4dCJ9LHsiZW5hYmxlZCI6dHJ1ZSwia2V5IjoiZW1haWwiLCJ2YWx1ZSI6IiIsInR5cGUiOiJ0ZXh0In0seyJlbmFibGVkIjp0cnVlLCJrZXkiOiJhcGlfa2V5IiwidmFsdWUiOiIiLCJ0eXBlIjoidGV4dCJ9XQ=="
        data-postman-var-1="15687974-2ca60778-1282-4a00-9d6a-8e90213b8248"
      />
      <div
        class="heading-section-semibold mb8"
      >
        Developer newsletter
      </div>
      <div
        class="body-regular mb24"
      >
        <p>
          If you're using our API, we highly encourage you to subscribe to our developer newsletter. It contains updates about
           
          <b>
            upcoming changes and breaking changes to the API
          </b>
          , new features and integrations.
        </p>
      </div>
      <button
        aria-disabled="false"
        class="wrapper fill primary medium"
        type="button"
      >
        Subscribe
      </button>
    </div>
  </div>
</div>
`;

exports[`<APIView/> render() should render a Reset Button 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      REST API
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="body-regular mb32"
      >
        <p>
          We use HTTP basic authentication to authenticate API requests. Below are the parameters you will need to access our API. For more details, please consult our
           
          <a
            href="https://developers.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Developer Documentation
          </a>
          .
        </p>
      </div>
      <div
        class="heading-section-semibold mb16"
      >
        API Access & Credentials
      </div>
      <div
        class="inputField form-group"
      >
        <label
          class="control-label"
          for="URL"
        >
          Base API URL
        </label>
        <span
          class="wrapper group horizontal"
        >
          <div
            class="wrapper left isNested"
          >
            <input
              class="input"
              id="url"
              name="url"
              readonly=""
              type="text"
              value="https://justatest.gorgias.com/api/"
            />
          </div>
          <button
            aria-disabled="false"
            class="wrapper copyBtn fill secondary medium right isAuxiliaryButton"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                file_copy
              </i>
              Copy
            </span>
          </button>
        </span>
      </div>
      <div
        class="inputField form-group"
      >
        <label
          class="control-label"
          for="email"
        >
          Username (your email address)
        </label>
        <span
          class="wrapper group horizontal"
        >
          <div
            class="wrapper left isNested"
          >
            <input
              class="input"
              id="email"
              name="email"
              readonly=""
              type="text"
              value=""
            />
          </div>
          <button
            aria-disabled="false"
            class="wrapper copyBtn fill secondary medium right isAuxiliaryButton"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                file_copy
              </i>
              Copy
            </span>
          </button>
        </span>
      </div>
      <div
        class="inputField mb32 form-group"
      >
        <label
          class="control-label"
          for="apiKey"
        >
          Password (API Key)
        </label>
        <span
          class="wrapper group horizontal"
        >
          <div
            class="wrapper left isNested"
          >
            <input
              class="input"
              id="apiKey"
              name="apiKey"
              readonly=""
              type="password"
              value="4a75a69bb409c2cd4041df29f5791103acaf0991bf0d0b3fa022951830482510"
            />
          </div>
          <button
            aria-disabled="false"
            class="wrapper wrapper fill secondary medium center isAuxiliaryButton"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              visibility
            </i>
          </button>
          <button
            aria-disabled="false"
            class="wrapper fill destructive medium center isAuxiliaryButton"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                refresh
              </i>
              Reset
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper copyBtn fill secondary medium right isAuxiliaryButton"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                file_copy
              </i>
              Copy
            </span>
          </button>
        </span>
      </div>
      <div
        class="heading-subsection-semibold mb8"
      >
        Postman collection
      </div>
      <div
        class="body-regular mb24"
      >
        <p>
          You can also import our
           
          <a
            href="https://www.getpostman.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Postman
          </a>
           
          collection below to quickly connect and use our REST API.
        </p>
      </div>
      <div
        class="postman-run-button mb32"
        data-postman-action="collection/import"
        data-postman-collection-url="entityId=15687974-2ca60778-1282-4a00-9d6a-8e90213b8248&entityType=collection&workspaceId=b6894a63-39b4-496f-acdc-db697172e169"
        data-postman-param="env%5BGorgias%20Helpdesk%5D=W3siZW5hYmxlZCI6dHJ1ZSwia2V5IjoiZG9tYWluIiwidmFsdWUiOiJqdXN0YXRlc3QiLCJ0eXBlIjoidGV4dCJ9LHsiZW5hYmxlZCI6dHJ1ZSwia2V5IjoiZW1haWwiLCJ2YWx1ZSI6IiIsInR5cGUiOiJ0ZXh0In0seyJlbmFibGVkIjp0cnVlLCJrZXkiOiJhcGlfa2V5IiwidmFsdWUiOiI0YTc1YTY5YmI0MDljMmNkNDA0MWRmMjlmNTc5MTEwM2FjYWYwOTkxYmYwZDBiM2ZhMDIyOTUxODMwNDgyNTEwIiwidHlwZSI6InRleHQifV0="
        data-postman-var-1="15687974-2ca60778-1282-4a00-9d6a-8e90213b8248"
      />
      <div
        class="heading-section-semibold mb8"
      >
        Developer newsletter
      </div>
      <div
        class="body-regular mb24"
      >
        <p>
          If you're using our API, we highly encourage you to subscribe to our developer newsletter. It contains updates about
           
          <b>
            upcoming changes and breaking changes to the API
          </b>
          , new features and integrations.
        </p>
      </div>
      <button
        aria-disabled="false"
        class="wrapper fill primary medium"
        type="button"
      >
        Subscribe
      </button>
    </div>
  </div>
</div>
`;
